GetShowForLoggedUser
